package com.kodgames.message.proto.activity;
option java_outer_classname = "ActivityProtoBuf";

// 玩家排名信息
message PlayerRankPROTO
{
	required int32 roleId = 1;
	required string nickname = 2;	
	required int32 score = 3;
	required int32 rankOrder = 4;
	required int64 rankTime = 5;
}

// 活动排名信息
message ActivityRankPROTO
{
	required int32 activityId = 1;
	repeated PlayerRankPROTO record = 2;
}

// 请求活动排行榜
message CGActivityRankREQ
{
}

// 应答活动排行榜
message GCActivityRankRES
{
	required int32 result = 1;
	repeated ActivityRankPROTO rank = 2;
	repeated ActivityRankPROTO historyRank = 3;
}

// 转盘活动奖励
message TurntableRewardPROTO
{
	required int32 activityId = 1;  // 活动id
	required int32 rewardId = 2;   	// 奖励id
	required int64 gainTime = 3;   	// 获取时间
	required string rewardDesc = 4; // 奖励描述
}

// 转盘数据
message TurntableItemPROTO
{
	required int32 itemId = 1; // 道具id
	required string itemName = 2; 
	required string itemDesc = 3;
}

// 查询转盘信息
message CGQueryTurntableInfoREQ
{
}

message GCQueryTurntableInfoRES
{
	required int32 itemCount = 1; 		// 抽奖次数
	repeated TurntableRewardPROTO rewards = 2;  	// 奖励	
	required int32 result = 3;		// 错误码
	repeated string lastRewardInfos = 5;
}

// 转盘抽奖
message CGTurntableDrawREQ
{
}

message GCTurntableDrawRES
{
	required int32 result = 1; 				// 错误码
	required int32 itemCount = 2; 			// 抽奖次数
	optional TurntableRewardPROTO reward = 3;  	// 奖励	
	repeated string lastRewardInfos = 4;
}

// 玩家可以抽奖推送消息
message GCPlayerHasItemCountSYN
{
	
}

// 转盘奖励分享
message CGShareTurntableRewardREQ
{
}

message CGShareTurntableRewardRES
{
	required int32 result = 1;
	required int32 itemCount = 2; 			// 抽奖次数
}

//限免活动
message LimitedCostlessActivityPROTO 		
{
	required int64 activityId = 1;
	required int32 roomType = 2;
	required int64 startTime = 3;
	required int64 endTime = 4;
	required string name = 5;
}

message GCNewLimitedCostlessActivitySYN
{
	repeated LimitedCostlessActivityPROTO activityList = 1;
}

message CGLimitedCostlessActivityREQ
{

}

message GCLimitedCostlessActivityRES{
    required int32 result = 1;
    repeated LimitedCostlessActivityPROTO activityList = 2;
}
